...
    @Provides
    @Singleton
    fun provideProductList(): List<ProductDto> {
        return listOf(
            ProductDto(
                id = "1",
                name = "Smartphone",
                description = "Latest Android Smartphone",
                price = 699.99,
                isFavourite = false,
                imageUrl = "https://www.static-src.com/wcsstore/Indraprastha/images/catalog/full//105/MTA-44094578/samsung_samsung_galaxy_s21_garansi_resmi_full02_s49mg6ar.jpg"
            ),
            ProductDto(
...
